<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity"
    android:background="@color/background">

    <TextView
        android:id="@+id/helloText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:text="@string/app_name"
        android:textSize="50dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/startButton" />
    
    <com.google.android.material.button.MaterialButton
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/startButtonStart"
        android:textColor="@color/buttonTextColor"

        android:backgroundTint="@color/buttonColor"
        app:cornerRadius="8dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/helloText"
        app:layout_constraintBottom_toTopOf="@id/privacyPolicyButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/privacyPolicyButton"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/privacyPolicyButton"
        android:textColor="@color/buttonTextColor"

        android:backgroundTint="@color/buttonColor"
        app:cornerRadius="8dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/startButton"
        app:layout_constraintBottom_toBottomOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>