<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity"
    android:background="@color/background">

    <androidx.cardview.widget.CardView
        android:layout_width="375dp"
        android:layout_height="625dp"

        app:cardCornerRadius="10dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="250dp"
                android:layout_height="250dp"

                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"

                android:layout_gravity="center_horizontal" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="250dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"

                android:layout_gravity="center_horizontal"

                android:hint="@string/textInputHint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/choosePhotoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"

                android:layout_gravity="center_horizontal"

                android:text="@string/chooseImageButton"
                android:textColor="@color/buttonTextColor"

                android:backgroundTint="@color/buttonColor"
                app:cornerRadius="8dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/openDatePickerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"

                android:layout_gravity="center_horizontal"

                android:text="@string/openDatePickerButton"
                android:textColor="@color/buttonTextColor"

                android:backgroundTint="@color/buttonColor"
                app:cornerRadius="8dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/openTimePickerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"

                android:layout_gravity="center_horizontal"

                android:text="@string/openTimePickerButton"
                android:textColor="@color/buttonTextColor"

                android:backgroundTint="@color/buttonColor"
                app:cornerRadius="8dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addHabitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"

                android:layout_gravity="center_horizontal"

                android:text="@string/addTheHabitButton"
                android:textColor="@color/buttonTextColor"

                android:backgroundTint="@color/buttonColor"
                app:cornerRadius="8dp" />



        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>